# IAPlatformOps

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yaml
cmake/: find_deps.cmake
include/platform_ops/: async.hpp  file.hpp  process.hpp
src/: CMakeLists.txt
src/cpp/: async.cpp  file.cpp  process.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  async.cpp  file.cpp  main.cpp  process.cpp
